# FluxComp

./: .gitignore  .pdm-python  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: api.rst  index.rst  requirements.txt
src/fluxcomp/: __init__.py  cosmic_ray_fluxes.py  flux.py  muon_fluxes.py  version.py
tests/: test_fluxes.py
