[project]
name = "FluxComp"
description = "(ensator) provides numpy and pandas compatible implemenntations of cosmic ray flux models as well as calculation for simulation weights."
authors = [
    {name = "Ludwig Neste", email = "ludwig.neste@fysik.su.se"},
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "numpy",
    "pandas",
    "particle",
    "scipy",
]
dynamic = ["version"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.urls]
homepage = "https://github.com/The-Ludwig/FluxComp"
repository = "https://github.com/The-Ludwig/FluxComp"
documentation = "https://fluxcomp.readthedocs.io/en/latest/"

[tool.pytest.ini_options]
minversion = "6.0"
xfail_strict = true
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers"
]
testpaths = [
    "tests",
]
log_cli_level = "DEBUG"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.ruff]
target-version = "py311"
src = ["src/fluxcomp"]

[tool.ruff.lint]
select = [
  "E", "F", "W", # flake8
  "B",           # flake8-bugbear
  "I",           # isort
  "C4",          # flake8-comprehensions
  "ISC",         # flake8-implicit-str-concat
  "PGH",         # pygrep-hooks
  "PIE",         # flake8-pie
  "PL",          # pylint
  "PT",          # flake8-pytest-style
  "RUF",         # Ruff-specific
  "SIM",         # flake8-simplify
  "T20",         # flake8-print
  "UP",          # pyupgrade
  "YTT",         # flake8-2020
]
ignore = [
  "PLR",   # Design related pylint codes
  "E501",  # Line too long
  "B905"       # strict= parameter of zip. (not in py3.8)
]

[tool.mypy]
files = [
  "src/**",
]
python_version = "3.11"
strict = true
warn_return_any = false
warn_unreachable = true
show_error_codes = true
ignore_missing_imports = true
disallow_untyped_decorators = false
enable_error_code = [
  "ignore-without-code",
  "truthy-bool",
  "redundant-expr",
]
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = "tests"
follow_imports = "skip"
strict = false

[tool.pdm]
plugins = [
    "sync-pre-commit-lock"
]
version = { source = "file", path = "src/fluxcomp/version.py" }

[tool.pdm.dev-dependencies]
dev = [
    "black<23.0.0,>=22.10.0",
    "pytest<8.0.0,>=7.2.0",
    "coverage<8.0.0,>=7.1.0",
    "pre-commit>=3.5.0",
    "ruff<1.0.0,>=0.0.252",
    "mypy<2.0.0,>=1.0.1",
    "codespell<3.0.0,>=2.2.4",
    "python-lsp-server>=1.8.2",
]

[tool.pdm.build]
includes = ["src/fluxcomp"]
